# skillscan

./: .gitignore  .pre-commit-config.yaml  DATA_COLLECTION.md  OPEN_SOURCE_BOUNDARY.md  README.md  SECURITY.md  landing.html  pyproject.toml  requirements.txt
api/: openapi.yaml
demo-check/: report.html  report.json  report.md
docs/: DECK.md  DECK_FINAL.md  DEPLOYMENT.md  DEV-PLAN.md  HOMEPAGE_IA.md  IMPLEMENTATION-notes.md  OPEN_CORE_ROADMAP.md  PITCH.md  RELEASE_CHECKLIST.md  RUNBOOK.md  SPEC-github-app-binding.md  WEBSITE_COPY.md  WHEN-TO-PROVIDE-KEYS.md  attestation-and-trust.md  boundary-and-spec.md  category-and-policy-spec.md  code-review-checklist.md  e2e-validation.md  evaluation-contract.md  fastify-reports-skeleton.ts  github-app-binding.md  governance-spec.md  postgres-schema.sql  saas-api.md  skill-discovery-rules.md  task-list.md
fixtures/: README.md
out_offsec/: attestation.json  report.json
out_offsec_v1/: report.json
out_primary/: report.json
out_v1/: report.json
policy/: finding-templates.json  general-default.json  offsec_ruleset.yaml  policy.yaml  redteam-default.json  signal-templates.json  skill.yaml.example
sample_skill/: SKILL.md
sample_skill_offsec/: SKILL.md
schema/: attestation.json  capability.json  openapi-reports.yaml  report-v1.json  report.json
scripts/: quick-scan.sh  sync-rules.py  validate_report_schema.py
server/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
skillscan/: __init__.py  cli.py  (+5 more)
skillscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+39 files in other folders)
