[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillscan-governance"
version = "0.1.0"
description = "Governance scanner for Moltbot/Clawdbot skills"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "SkillScan" }
]
dependencies = ["jsonschema>=4.0"]

[project.scripts]
skillscan = "skillscan.cli:main"

[tool.setuptools]
packages = ["skillscan"]

[tool.setuptools.package-data]
skillscan = ["rules/*.json", "fixtures/**/*", "schema/*.json"]
